[gd_scene load_steps=16 format=3 uid="uid://c5aga45gxki8a"]

[ext_resource type="Script" path="res://enemyCharge.gd" id="1_g8wmc"]
[ext_resource type="Texture2D" uid="uid://dpj7fans8ssa0" path="res://deer.png" id="2_3wmb6"]
[ext_resource type="AudioStream" uid="uid://qxfjnbqrobwf" path="res://monster_die.wav" id="3_15syr"]
[ext_resource type="AudioStream" uid="uid://dxsnxllo65ycf" path="res://swing_floraphonic_from_pixabay_.mp3" id="4_r5sqq"]
[ext_resource type="AudioStream" uid="uid://crs1lqxpf53eo" path="res://metal-pipe-162670_Kaleb_Rubio_from_Pixabay.mp3" id="5_0bh06"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_afoyd"]

[sub_resource type="AtlasTexture" id="AtlasTexture_quo13"]
atlas = ExtResource("2_3wmb6")
region = Rect2(719, 0, 719, 1251)

[sub_resource type="AtlasTexture" id="AtlasTexture_gkhpt"]
atlas = ExtResource("2_3wmb6")
region = Rect2(0, 0, 719, 1251)

[sub_resource type="AtlasTexture" id="AtlasTexture_aru0y"]
atlas = ExtResource("2_3wmb6")
region = Rect2(719, 0, 719, 1251)

[sub_resource type="AtlasTexture" id="AtlasTexture_vgek8"]
atlas = ExtResource("2_3wmb6")
region = Rect2(0, 0, 719, 1251)

[sub_resource type="AtlasTexture" id="AtlasTexture_ji0to"]
atlas = ExtResource("2_3wmb6")
region = Rect2(719, 0, 719, 1251)

[sub_resource type="AtlasTexture" id="AtlasTexture_npeox"]
atlas = ExtResource("2_3wmb6")
region = Rect2(1438, 0, 719, 1251)

[sub_resource type="AtlasTexture" id="AtlasTexture_fyggo"]
atlas = ExtResource("2_3wmb6")
region = Rect2(0, 0, 719, 1251)

[sub_resource type="AtlasTexture" id="AtlasTexture_a7cth"]
atlas = ExtResource("2_3wmb6")
region = Rect2(1438, 0, 719, 1251)

[sub_resource type="SpriteFrames" id="SpriteFrames_u8br5"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_quo13")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gkhpt")
}],
"loop": true,
"name": &"charge",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_aru0y")
}],
"loop": true,
"name": &"dash",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vgek8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ji0to")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_npeox")
}],
"loop": false,
"name": &"death",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fyggo")
}],
"loop": true,
"name": &"idle",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_a7cth")
}],
"loop": true,
"name": &"stunned",
"speed": 5.0
}]

[node name="EnemyCharge" type="CharacterBody3D"]
collision_layer = 2
collision_mask = 3
script = ExtResource("1_g8wmc")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_afoyd")

[node name="AnimatedSprite3D" type="AnimatedSprite3D" parent="."]
transform = Transform3D(0.327755, 0, 0, 0, 0.327755, 0, 0, 0, 0.327755, 0, 1.47479, 0)
pixel_size = 0.009
billboard = 2
sprite_frames = SubResource("SpriteFrames_u8br5")
animation = &"dash"
autoplay = "idle"

[node name="DeathSound" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("3_15syr")
unit_size = 2.0
bus = &"Sfx"

[node name="dashSound" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("4_r5sqq")

[node name="crashSound" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("5_0bh06")
